fixed logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 #icon {
-  /* padding-top: 2%;
-  padding-left: 5%; */
-  height: 3em;
+  padding-left: 25px;
+  height: 2.5em;
 }
 
 .jumbotron {
